# icp-101-rust-boilerplate

./: Cargo.toml  Makefile  README.md  dfx.json  did.sh  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json
src/icp_rust_boilerplate_backend/: Cargo.toml  icp_rust_boilerplate_backend.did
src/icp_rust_boilerplate_backend/src/: lib.rs
src/votitng_system/: Cargo.toml  votitng_system.did
src/votitng_system/src/: lib.rs
